# rhythm_game

./: Cargo.toml  README.md  index.html  release.html
assets/levels/: 1.json
levels/: 0.json
src/: main.rs
