[package]
name = "rhythm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
derive_more = "0.99"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[profile.dev.package.'*']
opt-level = 3
