[package]
name = "rhythm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "=0.3.13" # Android builds don't work with newer versions
derive_more = "0.99"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[profile.release]
#strip = true

[profile.dev.package.'*']
opt-level = 3

[package.metadata.android]
assets = "assets/"
